    - Fixed off-by-1 error where Growth Accelerators had the bonus from an extra level of speed research
    - Fixed conversion crash when converting from very old saves
    - Fixed unpowered SRF Emitters blocking Tiberium growth
    - Fixed passengers in MARVs multiplying the amount of ore harvested
---------------------------------------------------------------------------------------------------
Version: 1.0.5
  Changes:
    - Added warning to not run the main Tiberium mod and the beta Tiberium mod at the same time
    - Lowered selection priority of SRF walls, so you can now mine things from underneath SRF walls
    - Tiberium Science now makes labs illuminate with bright green light when the DiscoScience mod is active
    - Tiberium Only map gen preset now generated earlier during startup so that other mods will be more likely to correctly apply their changes to it
  Bugfixes:
    - Fixed mining drills placed before Tiberium mod was present not activating when Tiberium ore grows underneath them
    - Fixed growth interval not being updated when you /tibRebuildLists
    - Fixed crash from attempting to damage invalid entity
    - Fixed our recipe detection to match the automatic correction applied by base Factorio when amount_max is less thant amount_min
    - Fixed crash from destroying multiple connected SRF Hubs on the same tick
---------------------------------------------------------------------------------------------------
Version: 1.0.4
  Features:
    - Added in-game wiki to explain the basics of the mod
  Changes:
    - Removed Prospector conflict, since they updated their mod to be compatible with Tiberium (thanks Mylon!)
---------------------------------------------------------------------------------------------------
Version: 1.0.3
  Changes:
    - Slightly improved Tiberium Spike icon
  Bugfixes:
    - Fixed crash from entities dying after being registered by other mods