@@ -213,9 +213,7 @@ growthAcceleratorEntity.energy_source = {
 	emissions_per_minute = 2,
 }
 
-data:extend{growthAcceleratorEntity}
-
-data:extend{
+data:extend{growthAcceleratorEntity, 
 	--Void recipe for consuming energy credits
 	{
 		type = "recipe",
@@ -256,6 +254,7 @@ data:extend{
 		icon_size = 128,
 		flags = {"placeable-neutral", "placeable-player", "player-creation"},
 		minable = {mining_time = 2, result = "growth-accelerator"},
+		placeable_by = {item = "growth-accelerator", count = 1},
 		max_health = 250,
 		corpse = "centrifuge-remnants",
 		dying_explosion = "medium-explosion",
@@ -384,16 +383,6 @@ data:extend{
 		stack_size = 15,
 	},
 	{
-		type = "item",
-		name = "growth-accelerator-node",
-		icon = tiberiumInternalName.."/graphics/technology/growth-accelerator.png",
-		icon_size = 128,
-		subgroup = "a-buildings",
-		order = "d[growth-accelerator]",
-		place_result = "growth-accelerator",
-		stack_size = 15,
-	},
-	{
 		type = "beacon",
 		name = "growth-accelerator-beacon",
 		energy_usage = "10W",
@@ -479,10 +468,7 @@ data:extend{
         order = "b[srf]",
         place_result = "CnC_SonicWall_Hub",
         stack_size = 50
-    }
-}
-
-data:extend{
+    },
     {
         type = "electric-energy-interface",
         name = "CnC_SonicWall_Hub",
